--- a/src/components/LandingHeader.astro
+++ b/src/components/LandingHeader.astro
@@ -7,19 +7,19 @@ import Logo from "./Logo.astro";
   class="py-3 px-10 flex items-center fixed top-0 w-full justify-between z-40 text-white"
 >
   <div class="flex flex-grow basis-0">
-    <Logo />
+   <a href="./"><Logo /></a>
   </div>
 
   <nav class="hidden xl:block sm:hidden">
     <ul
       class="flex text-sm [&>li>a]:transition-colors [&>li>a]:duration-500 [&>li>a]:text-current [&>li>a]:font-medium [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2"
     >
-      <li><a href="">Model S</a></li>
-      <li><a href="">Model 3</a></li>
-      <li><a href="">Model X</a></li>
-      <li><a href="">Model Y</a></li>
-      <li><a href="">Powerwall</a></li>
-      <li><a href="">Carga</a></li>
+      <li><a href="#model-s">Model S</a></li>
+      <li><a href="#model-3">Model 3</a></li>
+      <li><a href="#model-x">Model X</a></li>
+      <li><a href="#model-y">Model Y</a></li>
+      <li><a href="#powerwall">Powerwall</a></li>
+      <li><a href="#accesorios">Carga</a></li>
     </ul>
   </nav>
 
@@ -27,11 +27,12 @@ import Logo from "./Logo.astro";
     <ul
       class="flex text-sm [&>li>a]:transition-colors [&>li>a]:duration-500 [&>li>a]:font-medium [&>li>a]:text-current [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2"
     >
-      <li class="hidden xl:block sm:hidden"><a href="">Tienda</a></li>
-      <li class="hidden xl:block sm:hidden"><a href="">Cuenta</a></li>
-      <li><a href="">Menú</a></li>
+      <li class="hidden xl:block sm:hidden"><a href="#">Tienda</a></li>
+      <li class="hidden xl:block sm:hidden"><a href="#">Cuenta</a></li>
+      <li><a href="#">Menú</a></li>
     </ul>
   </nav>
+
   <div
     id="menu-backdrop"
     class={`
@@ -52,43 +53,43 @@ import Logo from "./Logo.astro";
 
   listItem.forEach((item) => {
     item.addEventListener("mouseenter", () => {
-      const { left, top, width, height } = item.getBoundingClientRect();
+      const { left, top, width, height } = item.getBoundingClientRect()
 
-      menuBackDrop.style.setProperty("--left", `${left}px`);
-      menuBackDrop.style.setProperty("--top", `${top}px`);
-      menuBackDrop.style.setProperty("--width", `${width}px`);
-      menuBackDrop.style.setProperty("--height", `${height}px`);
+      menuBackDrop.style.setProperty("--left", `${left}px`)
+      menuBackDrop.style.setProperty("--top", `${top}px`)
+      menuBackDrop.style.setProperty("--width", `${width}px`)
+      menuBackDrop.style.setProperty("--height", `${height}px`)
 
-      menuBackDrop.style.opacity = "1";
-      menuBackDrop.style.visibility = "visible";
-    });
+      menuBackDrop.style.opacity = "1"
+      menuBackDrop.style.visibility = "visible"
+    })
 
     item.addEventListener("mouseleave", () => {
-      menuBackDrop.style.opacity = "0";
-      menuBackDrop.style.visibility = "hidden";
-    });
-  });
+      menuBackDrop.style.opacity = "0"
+      menuBackDrop.style.visibility = "hidden"
+    })
+  })
 </script>
 
 <script>
-  const $header = document.querySelector("#landing-header") as HTMLElement;
+  const $header = document.querySelector("#landing-header") as HTMLElement
 
   const observerOptions = {
     root: null,
     rootMargin: "0px",
     threshold: 0.9,
-  };
+  }
 
   const observer = new IntersectionObserver((entries) => {
     entries.forEach((entry) => {
-      const { isIntersecting } = entry;
+      const { isIntersecting } = entry
       if (isIntersecting) {
-        const color = entry.target.getAttribute("data-header-color");
+        const color = entry.target.getAttribute("data-header-color")
         $header.style.color = color;
       }
-    });
-  }, observerOptions);
+    })
+  }, observerOptions)
 
-  const $sections = document.querySelectorAll(".landing-section");
-  $sections.forEach((section) => observer.observe(section));
+  const $sections = document.querySelectorAll(".landing-section")
+  $sections.forEach((section) => observer.observe(section))
 </script>
