--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,40 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import LandingHeader from "../components/LandingHeader.astro"
+import Accesories from "../components/Accesories.astro";
 import HeroSeccion from "../components/HeroSection.astro"
-import ChargeSection from "../components/ChargeSection.astro"
+import LandingHeader from "../components/LandingHeader.astro"
+import ModelS from "../components/ModelS.astro";
+import ModelThree from "../components/ModelThree.astro";
+import ModelX from "../components/ModelX.astro";
+import ModelY from "../components/ModelY.astro";
+import PowerWall from "../components/PowerWall.astro";
+import Layout from "../layouts/Layout.astro";
+
 ---
 
 <Layout title="Electric Cars, Solar & Clean Energy | Tesla">
   <LandingHeader />
 
-  <main class="snap-y snap-mandatory relative w-full h-screen overflow-auto scroll-smooth">
+  <main class="snap-y snap-mandatory relative w-full h-screen overflow-y-auto overflow-x-hidden scroll-smooth">
     <div class="snap-center">
       <HeroSeccion />
     </div>
     <div class="snap-center">
-      <ChargeSection />
+      <ModelY />
     </div>
+    <div class="snap-center">
+      <ModelThree />
+    </div>
+    <div class="snap-center">
+      <ModelS />
+    </div>
+    <div class="snap-center">
+      <ModelX />
+    </div>
+    <div class="snap-center">
+      <PowerWall />
+    </div>
+    <div class="snap-center">
+      <Accesories />
     </div>
   </main>
 </Layout>
